--- a/src/app/austinsidebar/austinsidebar.component.html
+++ b/src/app/austinsidebar/austinsidebar.component.html
@@ -34,7 +34,7 @@
 
 
 
-<div><Strong>New Release Movies</Strong></div>
+<div class="hide_on_mobile"><Strong>New Release Movies</Strong><hr></div>
   <div *ngFor="let data of localVar.items; let i=index">
 
     <span *ngIf="i<9">
