--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,14 @@
 <div>
+  <form class="form-group form-control-lg">
+    <h3> Please fill out the below form to contact us</h3>
 
-  <h3> Please fill out the below form to contact us</h3>
+    <label class="col-2 col-form-label"> First Name :  <input type="text" name="firstName"/></label><br>
+    <label> Last Name :   <input type="text" name="lastName"/></label><br>
+    <label> Phone Number : <input type="number" name="phoneNumber"/></label><br>
+    <label> Email Address : <input type="email" class="form-control" name="email"/></label><br>
+
+    <label> Message : <textarea></textarea></label>
+
+  </form>
+
 </div>
