--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -7,11 +7,15 @@
 
 <div class="row">
 <div *ngFor="let data of listOfMovies.items; let i=index" >
+
   <span *ngIf="i<15" class="col-lg-6">
       <a href="javascript:void(0)" ><span class="moviesTitle" (click)="video(data.contentDetails.upload.videoId)">{{data.snippet.title}}</span></a>
 <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.medium.height"/></a>    <hr/>
   </span>
 </div>
+</div>
+<div *ngIf="loadMore"class="row" click="getMoreMovies(nextToken)">
+  Load More Movies..
 </div>
 
 
