--- a/src/app/nepalsidebar/nepalsidebar.component.css
+++ b/src/app/nepalsidebar/nepalsidebar.component.css
@@ -1,1 +1,77 @@
+.austinSideBar{
+  width: 271px;
+  background: lightgray;
+  border: 2px solid lightgray;
+  height:1948px;
+}
+.converter {
+  padding-top:20px;
+  margin-bottom:2px;
+}
+.moviesTitle {
+  width:320px;
+  position : relative;
+  color:red;
+  text-decoration: underline;
+  font-weight: bold;
+
+}
+
+/* The Modal (background) */
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  height : 50%;
+
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  z-index: 50;
+  border-radius:30%;
+  top: 1px;
+  left: 0px;
+  border:2px solid red;
+  color: red;
+  opacity: 0.2;
+
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  color: red;
+  opacity:1;
+  background: red;
+  color: white;
+}
+
+@media only screen and (max-width:480px) {
+  .hide_on_mobile {
+    display: none !important;}
+}
 
