--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<div class="container-fluid">
-  <div class="row well">
+<div class="">
+  <div class="well">
     <!--Inserting header component --><!--
     <app-header></app-header>-->
     <img src="assets/images/myTube_pictures.png" alternative="Image not found" width="50" height="50"/>
-    <span><p>Unlimited Movie Experience...</p></span>
+    <span><strong>Unlimited Movie Experience...</strong></span>
 
   </div>
   <div class="row">
     <div class="col-lg-12 lg-md-12  nav nav-justified nav-tabs">
       <nav class = "navbar navbar-inverse">
-        <div class="container-fluid">
+        <div class="">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
@@ -46,19 +46,21 @@
     </div>
 </div>
 
-  <div class="row grid-fluid">
-    <div class="col-md-3 col-lg-3 hide_on_mobile">
+  <div class="row container-fluid">
+    <!--<div class="col-md-3 col-lg-3 hide_on_mobile">
       <app-austinsidebar> </app-austinsidebar>
-    </div>
-    <div class ="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    </div>-->
+    <div class ="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+
 
       <router-outlet> </router-outlet>
 
     </div>
 
-    <div class ="col-md-3 col-lg-3 hide_on_mobile">
+    <!--<div class ="col-md-3 col-lg-3 hide_on_mobile">
       <app-nepalsidebar></app-nepalsidebar>
-    </div>
+    </div>-->
 
   </div>
 
