--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<!--
 
 
 
@@ -96,10 +97,10 @@
 
 </div>
 
-<!-- Pop up youtube model -->
+&lt;!&ndash; Pop up youtube model &ndash;&gt;
 <div *ngIf="showModel" id="myModal" class="modal">
 
-  <!-- Modal content -->
+  &lt;!&ndash; Modal content &ndash;&gt;
   <div class="modal-content">
     <span (click)="close()" class="close" title="Close">&times;</span>
 
@@ -113,3 +114,5 @@
 
 
 
+-->
+This page is under construction
