--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,13 @@
              <li><a routerLink="/home">HOME     </a></li>
 
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" a routerLink="/movies">MOVIES
-                  <span class="caret"></span></a>
+                <a class="dropdown-toggle movieClass" data-toggle="dropdown">MOVIES
+                  <span class="caret"></span>
+                </a>
                 <ul class="dropdown-menu">
-                  <li><a routerLink="/movies">HollyWood Movies</a></li>
-                  <li><a routerLink="/movies">BollyWood Movies</a></li>
-                  <li><a routerLink="/movies">Nepali Movies</a></li>
+                  <li><a routerLink="/movies/englishMovie">HollyWood Movies</a></li>
+                  <li><a routerLink="/movies/hindiMovie">BollyWood Movies</a></li>
+                  <li><a routerLink="/movies/nepaliMovie">Nepali Movies</a></li>
                 </ul>
               </li>
 
