--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,23 +1,23 @@
 
-<div class="row">
- <button class="btn btn-success"  (click)="movies('nepaliMovie')">Nepali Movies</button>
-  <!--<button class="btn btn-success"  (click)="movies('hindiMovie')">Hindi Movies</button>-->
-  <!--<button class="btn btn-success" (click)="movies('englishiMovie')">English Movies</button>-->
-
-</div>
 
 <div class="row">
 <div *ngFor="let data of listOfMovies.items; let i=index" >
 
-  <span *ngIf="i<15" class="col-lg-3 col-xl-3 col-md-3 col-sm-6">
-    <!--  <a href="javascript:void(0)" ><span class="moviesTitle" (click)="video(data.contentDetails.upload.videoId)">{{data.snippet.title}}</span></a>-->
-<a href="javascript:void(0)" ><img class="movieImage"[src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.medium.height"/></a>    <hr/>
+ <span *ngIf="i<15" class="col-lg-3 col-xl-3 col-md-3 col-sm-6">
+<a href="javascript:void(0)" ><span class="moviesTitle" (click)="video(data.contentDetails.upload.videoId)">{{data.snippet.title}}</span></a>
+  <span>
+     <a href="javascript:void(0)" ><img class="movieImage"[src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.medium.height"/><br>
+
+    </a>
+    <hr/>
   </span>
+
+  </span>
+
 </div>
 </div>
-<div *ngIf="loadMore"class="row" click="getMoreMovies(nextToken)">
-  Load More Movies..
-</div>
+
+
 
 
 <!-- Pop up youtube model -->
