--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,19 +21,9 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
              <li><a routerLink="/home">HOME     </a></li>
-
-              <li class="dropdown">
-                <a class="dropdown-toggle movieClass" data-toggle="dropdown">MOVIES
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a routerLink="/movies/englishMovie">HollyWood Movies</a></li>
-                  <li><a routerLink="/movies/hindiMovie">BollyWood Movies</a></li>
-                  <li><a routerLink="/movies/nepaliMovie">Nepali Movies</a></li>
-                </ul>
-              </li>
-
-              <li><a routerLink="/news">NEWS    </a></li>
+              <li><a routerLink="/movies/nepaliMovie">NEPALI MOVIES</a></li>
+              <li><a routerLink="/movies/hindiMovie">HINDI MOVIES</a></li>
+              <li><a routerLink="/news">VIDEO</a></li>
               <li><a routerLink="/contact">CONTACT US</a></li>
             </ul>
         <form class=" form-inline">
