--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -118,8 +118,9 @@
 
 This page is under construction
 -->
-<div class="">
 
+
+<div>
 <div class="row">
 
   <div class="col-sm-3 teliserial"  title="Click Me for More Hakka Hakki" (click)="moreInfo()">
@@ -179,7 +180,9 @@ This page is under construction
     </div>
   </div>
 </div>
+</div>
 <hr>
+
   <div class="row">
     <div class="col-sm-12 subSectionHeading">
       New Release Nepali Movie Trailer
