--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="well">
+  <div class="">
     <!--Inserting header component --><!--
     <app-header></app-header>-->
     <img src="assets/images/myTube_pictures.png" alternative="Image not found" width="50" height="50"/>
@@ -47,11 +47,11 @@
     </div>
 </div>
 
-  <div class="row container-fluid">
+  <div>
     <!--<div class="col-md-3 col-lg-3 hide_on_mobile">
       <app-austinsidebar> </app-austinsidebar>
     </div>-->
-    <div class ="">
+    <div>
 
 
 
@@ -64,7 +64,7 @@
 
   </div>
 
-<div class="well-sm">
+<div>
   <app-footer> </app-footer>
 </div>
 
