--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -66,6 +66,7 @@
   img {
     margin-left:10px;
   }
+
 }
 .moviesTitle {
   display:none;
@@ -89,7 +90,7 @@ hr {
 img  {
   margin-left:auto;
   margin-right:auto;
-  margin-left:20px;
+  /*margin-left:20px;*/
 }
 .blink_me {
   animation: blinker 1s linear infinite;
@@ -110,4 +111,15 @@ img  {
   background-color: red;
   color: white;
 
+}
+
+.row {
+  margin-left:0px;
+  margin-right: 0px;
+}
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
 }
