--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -145,3 +145,15 @@
 .row {
   margin-right:0px;
 }
+/*.navbar-toggle {
+  float: left;
+  padding: 9px 28px;
+}
+.nav > li > a {
+  padding : 10px 33px;
+  overflow: visible;
+
+}
+.navbar-collapse.in {
+  overflow-y: hidden;
+}*/
