--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -113,5 +113,14 @@ img  {
 
 }
 
-
+.row {
+  margin-left:0px;
+  margin-right: 0px;
+}
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
 
